# bootmate

./: .gitignore  Cargo.toml  PPA-SETUP.md  README.md  RELEASE.md  build-ppa.sh  build.rs  meson.build  update-version.sh
.github/workflows/: build-deb-amd64.yml  build-deb-arm64.yml  release-arm64.yml  release.yml
data/: ch.srueegger.bootmate.metainfo.xml.in
data/icons/: meson.build
data/ui/: window.ui
debian/: changelog  control  copyright  rules
po/: de.po  en.po
snap/: snapcraft.yaml
src/: application.rs  autostart.rs  entry_row.rs  main.rs  window.rs
