[package]
name = "bootmate"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
authors = ["Samuel Rüegger"]

[dependencies]
gtk = { version = "0.10", package = "gtk4", features = ["v4_20"] }
libadwaita = { version = "0.8", features = ["v1_8"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib = "0.21"
gio = "0.21"
