[package]
name = "bootmate"
version = "1.2.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["Samuel Rüegger"]
description = "A simple GTK4/Libadwaita application to manage autostart entries"
homepage = "https://github.com/srueegger/bootmate"
repository = "https://github.com/srueegger/bootmate"

[dependencies]
gtk = { version = "0.10", package = "gtk4", features = ["v4_12"] }
libadwaita = { version = "0.8", features = ["v1_5"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib = "0.21"
gio = "0.21"

[package.metadata.deb]
maintainer = "Samuel Rüegger"
copyright = "2025, Samuel Rüegger <mail@example.com>"
extended-description = """\
Boot Mate is a modern GTK4/Libadwaita application for managing autostart entries on Linux.
It allows you to easily add, edit, and remove applications that start automatically when you log in.
Features include separate views for user and system autostart entries."""
depends = "$auto, libgtk-4-1, libadwaita-1-0"
section = "utils"
priority = "optional"
assets = [
    ["target/release/bootmate", "usr/bin/", "755"],
    ["build-release/data/ch.srueegger.bootmate.desktop", "usr/share/applications/", "644"],
    ["build-release/data/ch.srueegger.bootmate.metainfo.xml", "usr/share/metainfo/", "644"],
    ["data/icons/ch.srueegger.bootmate.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["data/icons/ch.srueegger.bootmate-symbolic.svg", "usr/share/icons/hicolor/symbolic/apps/", "644"],
    ["build-release/data/bootmate.gresource", "usr/share/bootmate/", "644"],
    ["build-release/po/de/LC_MESSAGES/bootmate.mo", "usr/share/locale/de/LC_MESSAGES/", "644"],
    ["build-release/po/en/LC_MESSAGES/bootmate.mo", "usr/share/locale/en/LC_MESSAGES/", "644"],
    ["README.md", "usr/share/doc/bootmate/", "644"],
]
